# RuView

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.github/workflows/: ci.yml  pointcloud-pages.yml  security-scan.yml  sensing-server-docker.yml
docs/adr/: ADR-096-rvcsi-ffi-crate-layout.md  ADR-099-midstream-introspection-tap.md  README.md
firmware/esp32-csi-node/main/: csi_collector.c
nvsim/: sw.js.map
v2/: Cargo.toml
v2/crates/rvcsi-adapter-file/: Cargo.toml
v2/crates/rvcsi-adapter-file/src/: format.rs  lib.rs  recorder.rs  replay.rs
v2/crates/rvcsi-adapter-nexmon/: Cargo.toml  build.rs
v2/crates/rvcsi-adapter-nexmon/native/: rvcsi_nexmon_shim.c  rvcsi_nexmon_shim.h
v2/crates/rvcsi-adapter-nexmon/src/: chips.rs  ffi.rs  lib.rs  pcap.rs
v2/crates/rvcsi-cli/: Cargo.toml
v2/crates/rvcsi-cli/src/: commands.rs  main.rs
v2/crates/rvcsi-core/: Cargo.toml
v2/crates/rvcsi-core/src/: adapter.rs  error.rs  event.rs  frame.rs  ids.rs  lib.rs  validation.rs  window.rs
v2/crates/rvcsi-dsp/: Cargo.toml
v2/crates/rvcsi-dsp/src/: features.rs  lib.rs  pipeline.rs  stages.rs
v2/crates/rvcsi-events/: Cargo.toml
v2/crates/rvcsi-events/src/: detectors.rs  lib.rs  pipeline.rs  window_buffer.rs
v2/crates/rvcsi-node/: Cargo.toml  README.md  build.rs  index.d.ts  index.js  package.json
v2/crates/rvcsi-node/__test__/: api.test.cjs
v2/crates/rvcsi-node/src/: lib.rs
v2/crates/rvcsi-runtime/: Cargo.toml
v2/crates/rvcsi-runtime/src/: capture.rs  lib.rs  summary.rs
v2/crates/rvcsi-ruvector/: Cargo.toml
v2/crates/rvcsi-ruvector/src/: embedding.rs  jsonl.rs  lib.rs  memory.rs  store.rs
v2/crates/wifi-densepose-sensing-server/: Cargo.toml
v2/crates/wifi-densepose-sensing-server/src/: introspection.rs  lib.rs  main.rs
