[package]
name = "rvcsi-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "rvCSI runtime composition — wires a CsiSource + DSP + the event pipeline + RuVector export; the shared layer under rvcsi-node and rvcsi-cli (ADR-096)"
repository.workspace = true
keywords = ["wifi", "csi", "rvcsi", "runtime"]
categories = ["science"]

[dependencies]
rvcsi-core = { path = "../rvcsi-core" }
rvcsi-dsp = { path = "../rvcsi-dsp" }
rvcsi-events = { path = "../rvcsi-events" }
rvcsi-adapter-file = { path = "../rvcsi-adapter-file" }
rvcsi-adapter-nexmon = { path = "../rvcsi-adapter-nexmon" }
rvcsi-ruvector = { path = "../rvcsi-ruvector" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
